# Sen.Environment

./: .gitignore  404.html  CNAME  README.md  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  main.dart.js_1.part.js  main.dart.js_10.part.js  main.dart.js_12.part.js  main.dart.js_13.part.js  main.dart.js_14.part.js  main.dart.js_15.part.js  main.dart.js_16.part.js  main.dart.js_17.part.js  main.dart.js_19.part.js  main.dart.js_2.part.js  main.dart.js_20.part.js  main.dart.js_21.part.js  main.dart.js_22.part.js  main.dart.js_23.part.js  main.dart.js_24.part.js  main.dart.js_25.part.js  main.dart.js_26.part.js  main.dart.js_27.part.js  main.dart.js_28.part.js  main.dart.js_29.part.js  main.dart.js_30.part.js  main.dart.js_31.part.js  main.dart.js_32.part.js  main.dart.js_33.part.js  main.dart.js_34.part.js  main.dart.js_35.part.js  main.dart.js_36.part.js  main.dart.js_37.part.js  main.dart.js_7.part.js  main.dart.js_8.part.js  main.dart.js_9.part.js  main.dart.mjs  (+4 more)
Kernel/: API.md  CMakeLists.txt  README.md  build.ps1  build.sh  meson.build  meson_options.txt
Kernel/dependencies/Rijndael/: meson.build
Kernel/dependencies/SHA/: CMakeLists.txt  meson.build
Kernel/dependencies/SHA224CryptoServiceProvider/: CMakeLists.txt  SHA224CryptoServiceProvider.h  meson.build
Kernel/dependencies/SHA256/: CMakeLists.txt  meson.build
Kernel/dependencies/avir/: meson.build
Kernel/dependencies/bzip2/: meson.build
Kernel/dependencies/canvas_ity/: meson.build
Kernel/dependencies/compile-time-regular-expressions/: meson.build
Kernel/dependencies/cpp-base64/: CMakeLists.txt  meson.build
Kernel/dependencies/dirent/: CMakeLists.txt  meson.build
Kernel/dependencies/etc1/: CMakeLists.txt  meson.build
Kernel/dependencies/fmt/: CMakeLists.txt  meson.build
Kernel/dependencies/json/: CMakeLists.txt  meson.build
Kernel/dependencies/libpng/: CMakeLists.txt  meson.build
Kernel/dependencies/lzma/: CMakeLists.txt  meson.build
Kernel/dependencies/magic_enum/: CMakeLists.txt  meson.build
Kernel/dependencies/md5/: meson.build
Kernel/dependencies/mio/: meson.build
Kernel/dependencies/open_vcdiff/: CMakeLists.txt  meson.build
Kernel/dependencies/parallel-hashmap/: meson.build
Kernel/dependencies/quickjs/: CMakeLists.txt  cutils.c  cutils.h  meson.build  quickjs.c  quickjs.h
Kernel/dependencies/simdjson/: CMakeLists.txt  meson.build
Kernel/dependencies/stringzilla/: CMakeLists.txt
Kernel/dependencies/thread-pool/: CMakeLists.txt  meson.build
Kernel/dependencies/tinyxml2/: meson.build
Kernel/dependencies/tsl/: CMakeLists.txt  meson.build
Kernel/dependencies/zip/: CMakeLists.txt  meson.build
Kernel/dependencies/zlib/: meson.build
Kernel/kernel/: CMakeLists.txt  meson.build
Kernel/kernel/definition/: assert.hpp  library.hpp  macro.hpp  utility.hpp
Kernel/kernel/dependencies/: compile-time-regular-expressions.hpp  mio.hpp  parallel-hashmap.hpp  quickjs.hpp  stringzilla.hpp  thread-pool.hpp
Kernel/kernel/interface/: callback.hpp  context.hpp  data.hpp  executor.hpp  interface.cpp  runtime.hpp  script.hpp  shell.hpp  version.hpp
Kernel/kernel/subprojects/: Rijndael.hpp  SHA.hpp  SHA224CryptoServiceProvider.hpp  SHA256.hpp  avir.hpp  bzip2.hpp  canvas_ity.hpp  compile-time-regular-expressions.hpp  decodeless.hpp  dirent.hpp  etc1.hpp  fmt.hpp  glaze.hpp  json.hpp  jsoncons.hpp  libpng.hpp  lzma.hpp  magic_enum.hpp  md5.hpp  mio.hpp  mscharconv.hpp  open_vcdiff.hpp  parallel-hashmap.hpp  pugixml.hpp  pvrtc.hpp  quickjs.hpp  simdjson.hpp  thread-pool.hpp  tinyxml2.hpp  tsl.hpp  zip.hpp  zlib.hpp
Kernel/kernel/support/: utility.hpp
Kernel/kernel/utility/: assert.hpp  clock.hpp  library.hpp  literal.hpp  macro.hpp  utility.hpp
Kernel/subprojects/PVRTCCompressor/: CMakeLists.txt  meson.build
Kernel/subprojects/Rijndael/: CMakeLists.txt  meson.build
Kernel/subprojects/SHA224CryptoServiceProvider/: CMakeLists.txt
Kernel/subprojects/SHA256/: SHA256.h
Kernel/subprojects/avir/: CMakeLists.txt  meson.build
Kernel/subprojects/bzip2/: CMakeLists.txt  meson.build
Kernel/subprojects/canvas_ity/: CMakeLists.txt  meson.build
Kernel/subprojects/compile-time-regular-expressions/: CMakeLists.txt  meson.build
Kernel/subprojects/decodeless/: CMakeLists.txt  allocator.hpp  allocator_concepts.hpp  allocator_construction.hpp  header.hpp  mappedfile.hpp  meson.build  offset_span.hpp  pmr_allocator.hpp  pmr_writer.hpp  writer.hpp
Kernel/subprojects/dirent/: CMakeLists.txt  meson.build
Kernel/subprojects/etc1/: CMakeLists.txt  meson.build
Kernel/subprojects/fmt/: CMakeLists.txt  meson.build
Kernel/subprojects/glaze/: CMakeLists.txt
Kernel/subprojects/jsoncons/: CMakeLists.txt  meson.build
Kernel/subprojects/libpng/: CMakeLists.txt  meson.build
Kernel/subprojects/lzma/: CMakeLists.txt  meson.build
Kernel/subprojects/magic_enum/: CMakeLists.txt  magic_enum_format.hpp  meson.build
Kernel/subprojects/md5/: CMakeLists.txt
Kernel/subprojects/mio/: CMakeLists.txt
Kernel/subprojects/mscharconv/: CMakeLists.txt  meson.build
Kernel/subprojects/open_vcdiff/: CMakeLists.txt  meson.build
Kernel/subprojects/parallel-hashmap/: CMakeLists.txt  meson.build
Kernel/subprojects/pugixml/: CMakeLists.txt  meson.build
Kernel/subprojects/quickjs/: CMakeLists.txt  meson.build  quickjs-libc.c  quickjs.c  quickjs.h
Kernel/subprojects/simdjson/: CMakeLists.txt
Kernel/subprojects/thread-pool/: CMakeLists.txt
Kernel/subprojects/tinyxml2/: CMakeLists.txt
Kernel/subprojects/zip/: CMakeLists.txt  meson.build
Kernel/subprojects/zlib/: CMakeLists.txt  adler32.c  crc32.c  crc32_braid_comb.c  deflate.c  gzguts.h  gzread.c  infback.c  inflate.c  meson.build  (+3 more)
Kernel/test/: CMakeLists.txt  main.cpp  meson.build
Launcher/: .gitignore  CMakeLists.txt  Cargo.toml  launcher.cpp  launcher.cppm  launcher.rc  meson.build
Launcher/src/: main.rs
Shell/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.ps1  build.sh  meson.build  shell.cpp  shell.cppm
Shell/bridge/: data.cppm  data.hpp  executor.cppm  executor.hpp
Shell/src/: main.rs
(+1095 files in other folders)
