[package]
name = "Shell"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
rfd = "0.15.2"
libc = "0.2.169"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_Globalization", "Win32_System_Services", "Wdk", "Wdk_System_SystemServices"]}